assets/style.css
body {
	font-family: 'Roboto Slab', serif;
	color: gray;
	font-weight: 300;
	font-size: 14px;
	margin: 0;
}
/* sticky navigation bar that's hidden until scrolling */
#nav {
	height:55px;
	width: 100%;
	position:fixed;
	padding-top: 2px;
	top:0;
	left:0;
	background-color:#ffffff;
	z-index:9999;
	display: none;
/* drop shadow on navbar */
	-webkit-box-shadow: 0 10px 6px -6px #999;
    -moz-box-shadow: 0 8px 6px -6px #999;
    box-shadow: 0 10px 6px -6px #999;
}

* {
  margin: 0;
  padding: 0;
  border: 0;
  font-size: 100%;
  vertical-align: baseline;
}

/* JMK logo header */
header {
  height: 100px;
  position:fixed;
  right:0;
  left:0;
  z-index:100;
}
/* start - making the menu on navbar transparent */
.navbar {
   background-color: transparent;
   background: transparent;
   border-color: transparent;
}
.navbar li { color: #000
}
/* end - making the navbar transparent */

.input-group[class*="col-"] {
  padding-right: 15px;
  padding-left: 15px;
}
.popover   {
  background-color: #e74c3c;
  color: #ecf0f1;
  width: 120px;
}
.popover.right .arrow:after {
  border-right-color: #e74c3c;
}
.mousetoHand{
	cursor: pointer;
}
.text-muted {
	color: #BCBB30;
}
b {
	font-style: bold;
	color: #005d64;
}
.text-thin {
	font-weight: 100;
}
.title-super {
	font-weight: 900;
}
.title-logo {
	margin-top: 40px;
}
p.main {
	text-align: justify;
}
.textContainer {
	vertical-align: middle;
	display: inline-block;
}
.hrpadding {
	margin-top: 1px;
	margin-bottom: 1px;
}

/* start - removing edge gutter */
.container-fluid.full-width {
    padding-left: 0;
    padding-right: 0;
    overflow-x: hidden;
}
.row.row-no-gutter {
    margin: 0
}
.row.row-no-gutter [class*="col-"] {
    padding: 0
}
.img-full-width {
    width: 100.5%;
    height: auto;
}
.has-inner .row.row-no-gutter {
    margin-left: -10px;
    margin-right: -10px;
}
.row.row-no-gutter .inner {
    padding-left: 10px;
    padding-right: 10px;
}
/* end - removing edge gutter */

.top-buffer {
	margin-top:50px;
}
h3 {
	display: inline;
}

p.button {
  text-align: center;
}
.colorBarRowOrg {
  background-color: #efc98b;
  height: 50px;
}
.colorBarRowGrn {
  background-color: #80aeb1;
  height: 50px;
}

/* BACK TO TOP BUTTON */
.btn-scrollTop {
  position: fixed;
  bottom: 5em;
  left: 150px;
  text-decoration: none;
  color: #000000;
  background-color: #ff4f00;
  font-size: 14px;
  padding: 1em;
  display: none;
}
.btn:hover {
  background-color: rgba(135, 135, 135);
}
/* END BACK TO TOP BUTTON */

/* MEDIA QUERIES */
@media only screen and (min-width : 768px) {
/* spacing for 3 column set on Services and About sections */
.row.row-table {
  display: table;
}
[class*="col-md-4"] {
  float: none;
  width: 33%;
  display: table-cell;
  vertical-align: top;
  position: relative;
  padding-bottom: 125px;
}
p.img {
  position: absolute;
  bottom: 0;
  /*text-align: center;*/
  margin-left: auto;
  margin-right: auto;
  width: 90%;
}
}
/* Using a <section> with a white background color to cover up main logo on scroll */
section {
  background-color: #ffffff;
  top:210px;
  position:relative;
  z-index:200;
}
@media(max-width: 770px) {
header {
  font-size: 18pt;
}
.colorBarRowOrg {
  background-color: #efc98b;
  height: 20px;
}
.colorBarRowGrn {
  background-color: #80aeb1;
  height: 20px;
}

/* transparent mini navbar converts to solid bg on media querie */
@media(max-width: 1200px) {
.navbar-transparent {
    background: #ffffff !important; /*Add your own background*/
}
}

